Add index.html and Resume.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<h1>Hello World! Welcome to my Savvy Coders Portfolio Project</h1></World>
-
-<img src="//media.licdn.com/dms/image/
-C4E03AQGqxiwI5dzglw/profile-displayphoto-shrink_200_200
-/0?e=1546473600&v=beta&t=cfvp1eTIxJJ4xGx7Lhp1REqY-KoyWnvPGkg9l6BUcko)" />
-
-<h2>Hello my name is Damian Clay-Downing</h2>
-
-<ol>
-    <li>Email: dclaydowning@gmail.com</li>
-    <li>Cell Phone: 314-574-1092</li>
-    <li>>Facebook: Damian Lebron Clay-Downing</li> 
-</ol>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
