--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Damian' Clay-Downing | Web Developer</title>
+    <link rel="stylesheet" type="text/css" href="index.css"> 
 </head>
 
 <body>
-    <h1>Hello World! Welcome to my Savvy Coders Portfolio Project</h1>
-    <p>Hello my name is Damian Clay-Downing</p>
+    <div class="grid-container">
+        <h1>Hello World! Welcome to my Savvy Coders Portfolio Project</h1>
+        <p>Hello my name is Damian Clay-Downing</p>
 
-    <img src="https://media.licdn.com/dms/image/C4E03AQGqxiwI5dzglw/profile-displayphoto-shrink_200_200/0?e=1546473600&v=beta&t=cfvp1eTIxJJ4xGx7Lhp1REqY-KoyWnvPGkg9l6BUcko"
-        alt="Profile">
+        <img src="https://media.licdn.com/dms/image/C4E03AQGqxiwI5dzglw/profile-displayphoto-shrink_200_200/0?e=1546473600&v=beta&t=cfvp1eTIxJJ4xGx7Lhp1REqY-KoyWnvPGkg9l6BUcko"
+            alt="Profile">
+    </div>
 
-        <h2>Contact Information</h2>
+    <h2>Contact Information</h2>
     <ul>
         <li><b>Email:</b> <i>dclaydowning@gmail.com</i></li>
         <li><b>Cell:</b> <i>314-574-1092</i></li>
-        <li><b>Github:</b> <a href="https://github.com/cdlay67">Damian Lebron Clay-Downing</a></li>
-        <li><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/damian-clay-downing-8ba89155/"></a>Damian Clay-Downing</li>
+        <li><b>Github:</b> <a href="https://github.com/cdlay67">Damian Clay-Downing</a></li>
+        <li><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/damian-clay-downing-8ba89155">Damian Clay-Downing</a></li>
     </ul>
 
 </body>
